--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
 
-  <title>Document</title>
+  <title>Evander Kristalino</title>
 </head>
 <body>
   <div id="root"></div>
